--- a/package.json
+++ b/package.json
@@ -5,11 +5,27 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "db:seed": "firebase firestore:delete --all-collections --yes && node firestoreImport"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
+    "@fortawesome/vue-fontawesome": "^3.0.0-3",
+    "@hennge/vue3-pagination": "^1.0.17",
+    "@vee-validate/i18n": "^4.6.2",
+    "@vee-validate/rules": "^4.6.2",
+    "@vueuse/head": "^0.6.0",
+    "core-js": "^3.6.5",
+    "dayjs": "^1.10.4",
+    "firebase": "^8.4.1",
+    "lodash": "^4.17.21",
+    "nprogress": "^0.2.0",
+    "vee-validate": "^4.6.2",
+    "vue": "^3.0.0",
+    "vue-final-modal": "^3.4.4",
+    "vue-router": "^4.0.3",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -18,7 +34,8 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
+    "eslint-plugin-vue": "^8.0.3",
+    "firestore-export-import": "^1.2.0"
   },
   "eslintConfig": {
     "root": true,
